--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@models/*": [
-        "src/app/models/*"
-      ],
-      "@services/*": [
-        "src/app/modules/main/services/*"
-      ],
-      "@environments/*": [
-        "src/environments/*"
-      ]
+      "@models/*": ["src/app/models/*"],
+      "@services/*": ["src/app/modules/main/services/*"],
+      "@environments/*": ["src/environments/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
